# dunetrg-rutils

./: .gitignore  pyproject.toml
notebooks/: mctruth_plots.ipynb
notebooks/archive/: mctruths.ipynb
plotting/: check_ides.py  make_mc_histograms.py
scripts/: check_evuid.py  draw_mcthruths.py  draw_mctruth_rdf.py  evrun_fixer.py  find_pdgids.py  make_mc_histograms.py  rmerger.py  show_trgtrees_size_simple.py  trgtree_slimmer.py
src/dunetrg_rutils/: __init__.py  utils.py  uv.py
src/dunetrg_rutils/cli/check/: check_evuid.py  check_ides.py
src/dunetrg_rutils/cli/fix/: evrun_fixer.py
src/dunetrg_rutils/cli/inspect/: find_pdgids.py  show_trgtrees_size.py
src/dunetrg_rutils/cli/io/: rmerger.py  trgtree_slimmer.py
src/dunetrg_rutils/cli/plot/: make_mc_histograms.py
test/: test_root_filter_gen_name.ipynb
