[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dunetrg_rutils"]

[project]
name = "dunetrg_rutils"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "awkward-pandas>=2023.8.0",
    "click>=8.3.1",
    "ipython>=8.18.1",
    "jupyterlab>=4.4.10",
    "mplhep>=0.4.1",
    "pandas>=2.3.3",
    "particle>=0.26.2",
    "rich>=14.2.0",
    "root==0.1a9",
    "uproot>=5.6.9",
]

[tool.uv]
package = true
