[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dunetrg_rutils"]

[project]
name = "dunetrg_rutils"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "awkward-pandas>=2023.8.0",
    "click>=8.3.1",
    "ipython>=8.18.1",
    "jupyter>=1.1.1",
    "mplhep>=0.4.1",
    "pandas>=2.3.3",
    "particle>=0.26.2",
    "rich>=14.2.0",
    "root>=0.1a12",
    "scipy>=1.17.1",
    "tabulate>=0.10.0",
    "uproot>=5.6.9",
]

[project.scripts]
dunetrg-io-merge         = "dunetrg_rutils.cli.io.rmerger:main"
dunetrg-io-slim          = "dunetrg_rutils.cli.io.trgtree_slimmer:main"
dunetrg-inspect-pdgids   = "dunetrg_rutils.cli.inspect.find_pdgids:cli"
dunetrg-inspect-trees    = "dunetrg_rutils.cli.inspect.show_trgtrees_size:main"
dunetrg-inspect-trees-s  = "dunetrg_rutils.cli.inspect.show_trgtrees_size_simple:main"
dunetrg-check-evuid      = "dunetrg_rutils.cli.check.check_evuid:main"
dunetrg-check-ides       = "dunetrg_rutils.cli.check.check_ides:main"
dunetrg-fix-evrun        = "dunetrg_rutils.cli.fix.evrun_fixer:main"
dunetrg-plot-mc-hists    = "dunetrg_rutils.cli.plot.make_mc_histograms:cli"

[tool.uv]
package = true
